syntax = 'proto3';

package calculator;

option java_package = 'com.proto.calculator';
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message Values {
  double first = 1;
  double second = 2;
}

message SquareRootRequest{
  int32 number = 1;
}

message SquareRootResponse{
  double number_root = 1;
}

service CalculatorService{
  rpc Sum(Values) returns (google.protobuf.DoubleValue) {};
  rpc Diff(Values) returns (google.protobuf.DoubleValue) {};
  rpc multiply(Values) returns (google.protobuf.DoubleValue) {};
  rpc divide(Values) returns (google.protobuf.DoubleValue) {};
  rpc primeNumberDecomposition(google.protobuf.Int32Value) returns (stream google.protobuf.Int32Value) {};

  // error handling
  // this RPC will throw an exception if the sent number is negative
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}